syntax = "proto3";

package api.comet.v1;

option go_package = "arod-im/api/comet/v1;v1";
option java_multiple_files = true;
option java_package = "api.comet.v1";

import "api/cdprotocol/protocol.proto";

service Comet { 
    // PushMsg push by key or mid
    rpc PushMsg(PushMsgReq) returns (PushMsgReply);
    // Broadcast send to every enrity
    rpc Broadcast(BroadcastReq) returns (BroadcastReply);
    // BroadcastRoom broadcast to one room
    rpc BroadcastRoom(BroadcastRoomReq) returns (BroadcastRoomReply);
    // Rooms get all rooms
    rpc Rooms(RoomsReq) returns (RoomsReply);
}

message PushMsgReq {
    repeated string keys =1;
    protocol.Proto proto = 2;
    int32 protoOp =3;
}
message PushMsgReply {}

message BroadcastReq{
    int32 protoOp = 1;
    protocol.Proto proto = 2;
    int32 speed = 3;
}
message BroadcastReply{}

message BroadcastRoomReq {
    string roomID = 1;
    protocol.Proto proto = 2;
}
message BroadcastRoomReply{}

message RoomsReq{}
message RoomsReply {
    map<string,bool> rooms = 1;
}